--- a/src/app/shared/styles/styles.scss
+++ b/src/app/shared/styles/styles.scss
@@ -16,3 +16,6 @@ html, body {
 }
 
 /* Additional global styles can go here */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
