login,  registros, etc

--- a/src/app/shared/components/article-card/article-card.component.html
+++ b/src/app/shared/components/article-card/article-card.component.html
@@ -1,1 +1,9 @@
-<p>article-card works!</p>
+<mat-card class="article-card">
+    <mat-card-header>
+      <mat-card-title style="text-transform: uppercase;font-weight: 500;">{{ title }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>{{ description }}</p>
+    </mat-card-content>
+  </mat-card>
+  
