--- a/src/app/v1/modules/registro/registro.component.html
+++ b/src/app/v1/modules/registro/registro.component.html
@@ -1,1 +1,40 @@
-<p>registro works!</p>
+<div class="registro-container">
+    <div class="crear-cuenta-container">
+      <div class="header">
+        <h2>NuevoLosLagos</h2>
+        <h3>Crear nueva cuenta</h3>
+      </div>
+    
+      <div class="card-container">
+        <mat-card class="account-card" routerLink="/registro-proveedor">
+          <mat-card-title>Crear cuenta para Proveedores</mat-card-title>
+          <mat-card-content>
+            <p>Accede a nuestra plataforma como proveedor y conecta con empresas de la Industria 4.0 para ofrecer tus productos o servicios especializados. Únete a una red de colaboración y aprovecha oportunidades de negocio en crecimiento.
+            </p>
+          </mat-card-content>
+        </mat-card>
+    
+        <mat-card class="account-card" routerLink="/registro-empresa">
+          <mat-card-title>Crear cuenta para Empresas de los lagos</mat-card-title>
+          <mat-card-content>
+            <p>Únete como empresa de la región de Los Lagos para aumentar tu visibilidad y competitividad en la Industria 4.0. Accede a recursos exclusivos, oportunidades de financiamiento y contacto directo con proveedores e innovadores.</p>
+          </mat-card-content>
+        </mat-card>
+    
+        <mat-card class="account-card" routerLink="/registro-persona">
+          <mat-card-title>Crear cuenta Personal</mat-card-title>
+          <mat-card-content>
+            <p>Regístrate como usuario profesional y explora oportunidades de desarrollo, empleo y formación en el ecosistema de la Industria 4.0. Conecta con empresas, accede a cursos en línea y mantente actualizado sobre las últimas tendencias del sector</p>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <div class="buttons-general">
+        <button class="btn-secondary volver" mat-button routerLink="/">
+          Volver
+        </button>
+        <button mat-flat-button class="btn-secondary acceder" routerLink="/login">
+          ¿ya tienes cuenta?
+        </button>
+      </div>
+    </div>
+  </div>
