--- a/src/app/v1/modules/quienes-somos/quienes-somos.component.html
+++ b/src/app/v1/modules/quienes-somos/quienes-somos.component.html
@@ -1,1 +1,123 @@
-<p>quienes-somos works!</p>
+<mat-card class="quienes-somos-container">
+    <mat-card-header class="header-container">
+      <mat-card-title class="title">Plataforma Inteligente Nuevo Los Lagos</mat-card-title>
+      <mat-card-subtitle class="subtitle">
+        Fortalecimiento del ecosistema de Manufactura Avanzada e i4.0
+      </mat-card-subtitle>
+    </mat-card-header>
+  
+    <mat-card-content>
+      <!-- Sección: ¿Quiénes somos? -->
+      <section class="section">
+        <h2>¿Quiénes somos?</h2>
+        
+        <div class="content-with-image">
+          <!--<img src="assets/images/quienes-somos.jpg" alt="¿Quiénes somos?" class="section-image">-->
+          <p>
+            "Nuevo Los Lagos" es una plataforma de innovación y desarrollo impulsada por Corfo, la Universidad Santo Tomás, Asimet y el Grupo Centinela. Esta iniciativa colaborativa tiene como misión fortalecer el ecosistema de manufactura avanzada e Industria 4.0 en la Región de Los Lagos, buscando mejorar la competitividad, diversificar la economía y aumentar la productividad local. A través de la integración de nuevas tecnologías, educación continua y colaboración público-privada, aspiramos a convertirnos en un motor clave para el crecimiento económico sostenible de la región.
+          </p>
+        </div>
+      </section>
+  
+      <mat-divider></mat-divider>
+  
+      <!-- Sección: Nuestra misión -->
+      <section class="section">
+        <h2>Nuestra misión</h2>
+        <div class="content-with-image">
+          <p>
+            El proyecto surge para hacer frente a los desafíos actuales del sector manufacturero en Los Lagos, como la falta de adopción de tecnología avanzada, la escasez de talento digital y la limitada infraestructura tecnológica. Nuestro enfoque está en ofrecer soluciones tangibles que permitan a las empresas locales modernizar sus procesos, mejorar su competitividad y adaptarse a las demandas de la industria global.
+          </p>
+        </div>
+        <p>
+          Concebimos "Nuevo Los Lagos" como un bien público que beneficia tanto a grandes empresas como a pymes, facilitando el acceso a herramientas de vanguardia, educación especializada y una red de proveedores estratégicos mediante el uso de inteligencia artificial. Nos comprometemos a crear un entorno propicio para la innovación, donde las empresas puedan conectarse fácilmente con proveedores de manufactura avanzada y acceder a cursos de formación que les permitan mantenerse a la vanguardia del sector.
+        </p>
+      </section>
+  
+      <mat-divider></mat-divider>
+  
+      <!-- Sección: Organización -->
+      <section class="section">
+        <h2>Organización</h2>
+        <div class="content-with-image">
+          <div>
+            <div class="class-a">
+              <mat-icon matListIcon>attach_money</mat-icon>
+              <span>
+                <strong>Corfo</strong>: En su rol de financiador, Corfo facilita los recursos y apoya la ejecución del proyecto, asegurando su alineación con las estrategias de desarrollo regional.
+              </span>
+            </div>
+            <div class="class-a">
+              <mat-icon matListIcon>school</mat-icon>
+              <span>
+                <strong>Universidad Santo Tomás</strong>: Como beneficiario principal, es responsable de la implementación del proyecto y de coordinar las acciones educativas y formativas, promoviendo la capacitación continua en manufactura avanzada e i4.0.
+              </span>
+            </div>
+            <div class="class-a">
+              <mat-icon matListIcon>business</mat-icon>
+              <span>
+                <strong>Grupo Centinela</strong>: Co-ejecutor del proyecto, aporta su experiencia en la transformación de procesos industriales y en la adopción de nuevas tecnologías, actuando como un puente entre las necesidades del sector y las soluciones tecnológicas.
+              </span>
+            </div>
+            <div class="class-a">
+              <mat-icon matListIcon>group</mat-icon>
+              <span>
+                <strong>Asimet</strong>: En su rol de mandante, supervisa el cumplimiento de los objetivos del proyecto, asegurando que las necesidades de la industria estén alineadas con los resultados esperados.
+              </span>
+            </div>
+          </div>
+        </div>
+      </section>
+  
+      <mat-divider></mat-divider>
+  
+      <!-- Sección: Desafíos y Brechas -->
+      <section class="centered-section">
+        <img src="assets/images/napkin-selection.png" alt="Conexión" class="responsive-image">
+      </section>
+  
+      <mat-divider></mat-divider>
+  
+      <!-- Sección: Componentes clave -->
+      <section class="section">
+        <h2>Componentes clave</h2>
+        <div class="content-with-image">
+          <p>
+            Para abordar estos desafíos, "Nuevo Los Lagos" se estructura en cinco componentes esenciales:
+          </p>
+        </div>
+        <ol>
+          <li><strong>Situación actual del ecosistema de MA e i4.0:</strong> Realizamos un levantamiento exhaustivo de la situación actual de la manufactura avanzada en la región y detectamos oportunidades para su desarrollo.</li>
+          <li><strong>Modelo de madurez en MA e i4.0:</strong> Diseñamos un diagnóstico personalizado para las empresas de la región, evaluando su nivel de adopción tecnológica y proporcionándoles un camino hacia la modernización.</li>
+          <li><strong>Modelo de caracterización de proveedores MA e i4.0:</strong> Este componente conecta a las empresas locales con proveedores regionales y nacionales, facilitando el acceso a soluciones tecnológicas y servicios especializados.</li>
+          <li><strong>Cursos de formación en red:</strong> Ofrecemos una serie de cursos de formación continua en manufactura avanzada e i4.0, adaptados a las necesidades del mercado local y disponibles tanto en modalidad gratuita como de pago.</li>
+          <li><strong>Vinculación empresa-proveedor basada en IA:</strong> A través de algoritmos de inteligencia artificial, conectamos a las empresas con los proveedores adecuados para cubrir sus necesidades específicas y les recomendamos cursos de formación que optimicen su rendimiento.</li>
+        </ol>
+      </section>
+  
+      <mat-divider></mat-divider>
+  
+      <!-- Sección: Nuestro compromiso -->
+      <section class="section">
+        <h2>Nuestro compromiso</h2>
+        <div class="content-with-image">
+          <p>
+            En "Nuevo Los Lagos", estamos comprometidos con el fortalecimiento del ecosistema productivo de la región mediante el fomento de la innovación y el acceso a tecnología avanzada. Nuestro objetivo es crear una red sólida de colaboración entre empresas, proveedores y actores educativos para impulsar el crecimiento de la manufactura avanzada y garantizar un futuro próspero para la Región de Los Lagos.
+          </p>
+        </div>
+      </section>
+  
+      <mat-divider></mat-divider>
+  
+      <!-- Sección: LOGOS -->
+      <section class="logos-section">
+        <div class="logos-container">
+          <img src="assets/logos/logo1.png" alt="Logo 1" class="logo">
+          <img src="assets/logos/logo2.png" alt="Logo 2" class="logo">
+          <img src="assets/logos/logo3.png" alt="Logo 3" class="logo">
+          <img src="assets/logos/logo4.png" alt="Logo 4" class="logo">
+        </div>
+      </section>
+    </mat-card-content>
+  </mat-card>
+  
