--- a/src/app/v1/modules/login/login.component.html
+++ b/src/app/v1/modules/login/login.component.html
@@ -29,11 +29,12 @@
           </mat-form-field>
   
           <!--<a class="forgot-password" href="#">¿Has olvidado la contraseña?</a>-->
-  
-          <!-- Mostrar mensaje de error si existe -->
-          <div *ngIf="errorMessage" class="error-message">
-            {{ errorMessage }}
-          </div>
+          @if (errorMessage) {
+            <div class="error-message">
+              {{ errorMessage }}
+            </div>
+          }
+          
         </form>
       </div>
       <div class="buttons-general">
