--- a/src/app/v1/modules/buscador-detalle/buscador-detalle.component.html
+++ b/src/app/v1/modules/buscador-detalle/buscador-detalle.component.html
@@ -1,14 +1,18 @@
 <!-- src/app/v1/modules/buscador-detalle/buscador-detalle.component.html -->
 
-<h2 mat-dialog-title>{{ data.detalles.titulo }}</h2>
+<h2 mat-dialog-title>{{ data.titulo }}</h2>
 <mat-dialog-content>
-  <p class="text-muted">Año de publicación: {{ getPublicationYear(data.detalles.fecha_publicacion) }}</p>
-  <p class="text-muted highlight" *ngIf="data.detalles.idioma === 'ingles'">Artículo original en inglés</p>
+  <p class="text-muted">
+    Año de publicación: 
+    {{ convertToDate(data.fecha_publicacion).getFullYear()
+       + '/' + convertToDate(data.fecha_publicacion).getMonth() }}
+  </p>
+  <p class="text-muted highlight" *ngIf="data.idioma === 'ingles'">Artículo original en inglés</p>
   <div [innerHTML]="resumenSanitizado" class="text-body"></div>
-  <p class="text-muted fst-italic">Sitio de origen: {{ obtenerDominio(data.detalles.link) }}</p>
+  <p class="text-muted fst-italic">Sitio de origen: {{ obtenerDominio(data.link) }}</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <a [href]="data.detalles.link" target="_blank" mat-button color="primary">Ir a la fuente</a>
+  <a [href]="data.link" target="_blank" mat-button color="primary">Ir a la fuente</a>
   <button mat-button color="accent" (click)="siguiente()">Siguiente</button>
   <button mat-button (click)="cerrar()">Cerrar</button>
 </mat-dialog-actions>
